# freeswitch

./: .gitignore  .gitmodules  Makefile.am  README.md  bootstrap.sh  configure.ac  modules.conf
.github/workflows/: deploy-to-aws.yml
conf/minimal/: modules.conf
conf/vanilla/autoload_configs/: acl.conf.xml  event_socket.conf.xml  modules.conf.xml
docker-build/: Dockerfile  Dockerfile.AWS.VR.additional.modules  Dockerfile.AWS.additional.modules  Dockerfile.AWS.additional.modules-aws-branch  Dockerfile.AWS.additional.modules.multistage-build  Dockerfile.additional.modules  Dockerfile.freeswitch-exe  create-cluster.sh  deploy.VR.sh  deploy.sh  docker-compose-ecs.yml  docker-compose-fs-image.yml  docker-compose-fs.AWS.yml  docker-compose-fs.yml  docker-compose-local.yml  docker-compose.aws.aida.AU.development.yml  docker-compose.aws.aida.AU.yml  docker-compose.aws.aida.yml  docker-compose.development.yml  docker-compose.original.yml  docker-compose.prod.yml.org  docker-compose.yml  docker-compose.yml.new  dockerignore  entrypoint.sh  freeswitch-api-7867f30c80d7.json  test_deploy.sh
docker-build/freeswitch_configuration/conf/: freeswitch.xml  vars.xml  vars.xml.aws  vars.xml.home  vars.xml.work
docker-build/freeswitch_configuration/conf/autoload_configs/: acl.conf.xml  google_tts.xml  lua.conf.xml  modules.conf.xml  python.conf.xml  sofia.conf.xml  switch.conf.xml  switch.conf.xml.aws  syslog.conf.xml  voicemail.conf.xml  xml_curl.conf.xml
docker-build/freeswitch_configuration/conf/dialplan/: default.xml  voicemail.xml
docker-build/freeswitch_configuration/conf/jingle_profiles/: client.xml
docker-build/freeswitch_configuration/conf/lang/en/vm/: sounds.xml
docker-build/freeswitch_configuration/conf/sip_profiles/: external-ipv6.xml  external.xml  internal-ipv6.xml  internal.xml  vmain.xml
docker-build/freeswitch_configuration/scripts/: aida-test.lua  aida.lua  bgAida.lua  call_handler.lua  custom-vocabulary.txt  ivr-menu.lua  json.lua  suburbs-2500char.txt  suburbs-org.txt  suburbs.lates.txt  suburbs.txt  testing-websocat.txt  transfer.lua  tui.lua  voicemail-event.lua
src/: switch_core_io.c  switch_core_media_bug.c  switch_cpp.cpp  switch_ivr_play_say.c  switch_rtp.c
src/include/: switch_cpp.h  switch_ivr.h
src/mod/applications/mod_aai_transcribe/: Makefile.am  README.md  aai_connector.cpp  aai_connector.h  mod_aai_transcribe.c  mod_aai_transcribe.h
src/mod/applications/mod_aai_transcription/: Makefile.am  audio_pipe.cpp  audio_pipe.hpp  base64.hpp  lws_aai_glue.cpp  lws_aai_glue.h  mod_aai_transcription.c  mod_aai_transcription.h
src/mod/applications/mod_audio_docker/: Makefile.am  README.md  audio_pipe.cpp  audio_pipe.hpp  lws_audio_docker_glue.cpp  lws_audio_docker_glue.h  mod_audio_docker.c  mod_audio_docker.h
src/mod/applications/mod_audio_fork/: Makefile.am  audio_pipe.cpp  audio_pipe.hpp  lws_glue.cpp
src/mod/applications/mod_audio_streaming/: audio_pipe.cpp  lws_aai_glue.cpp  lws_aai_glue.h  mod_audio_streaming.c
src/mod/applications/mod_azure_tts/: Makefile.am  mod_azure_tts.c
src/mod/applications/mod_dialogflow/: Makefile.am
src/mod/applications/mod_google_transcribe/: Makefile.am  google_glue.cpp  mod_google_transcribe.c
src/mod/applications/mod_google_tts/: Makefile.am
src/mod/applications/mod_google_tts/conf/autoload_configs/: google_tts.xml
src/mod/applications/mod_vr_test/: Makefile.am  mod_vr_test.c
src/mod/applications/mod_vr_test_1/: Makefile.am  mod_vr_test_1.2017.vcxproj  mod_vr_test_1.c
src/mod/endpoints/mod_sofia/: sofia.c
src/mod/languages/mod_lua/: mod_lua_wrap.cpp  my_swigable_cpp.h
